2015-07-29  Jacob Fenton  <bocajnotnef@gmail.com>

   * khmer/kfile.py: added infrastructure for doing compressed output
   * scripts/{count-median,extract-long-sequences,extract-paired-reads,
   extract-partitions,fastq-to-fasta,filter-abund-single,filter-abund,
   interleave-reads,normalize-by-median,sample-reads-randomly,
   split-paired-reads,trim-low-abund}.py: added compression
   * tests/test_{functions,scripts}.py: added tests
   * scripts/{load-graph,partition-graph}.py: made load-graph no longer add .pt
   to graph outfiles, changed partition-graph to not expect .pt's
   * doc/whats-new-2.0.rst: doc'd changes to load-graph and partition-graph

2015-07-29  Michael R. Crusoe  <crusoe@ucdavis.edu>

   * khmer/_khmer.cc: add more CPyChecker inspired fixes
   * lib/*.{cc,hh}: clean up includes and forward declarations

2015-07-29  Luiz Irber  <khmer@luizirber.org>

   * Makefile: Adapt Makefile rules for py3 changes.
   * jenkins-build.sh: Read PYTHON_EXECUTABLE and TEST_ATTR from environment.

2015-07-29  Amanda Charbonneau  <charbo24@msu.edu>

   * scripts/fastq-to-fasta.py: Changed '-n' default description to match
   behaviour

2015-07-29  Luiz Irber  <khmer@luizirber.org>

   * tests/test_{scripts,streaming_io}.py: Fix the build + add a test

2015-07-28  Titus Brown  <titus@idyll.org>

   * tests/test_streaming_io.py: new shell cmd tests for streaming/piping.
   * tests/khmer_tst_utils.py: refactor/replace runtestredirect(...) with
   scriptpath(...) and run_shell_cmd(...).
   * scripts/test_scripts.py: remove test_interleave_reads_broken_fq_4 for
   only one input file for interleave-reads.py; replace runscriptredirect call
   with run_shell_cmd.
   * scripts/interleave-reads.py: force exactly two input files.
   * scripts/split-paired-reads.py: fix print statement; clarify output.
   * scripts/{normalize-by-median.py,sample-reads-randomly.py,
   trim-low-abund.py}: if stdin is supplied for input, check that -o
   specifies output file.