@@ -32,7 +32,7 @@ from khmer.khmer_args import (build_counting_args, add_loadhash_args,
 import argparse
 from khmer.kfile import (check_space, check_space_for_hashtable,
                          check_valid_file_exists, add_output_compression_type,
-                         get_file_writer)
+                         get_file_writer, is_block, describe_file_handle)
 from khmer.utils import write_record, broken_paired_reader
 
 
@@ -343,10 +343,6 @@ def main():  # pylint: disable=too-many-branches,too-many-statements
     output_name = None
 
     if args.single_output_file:
-        if args.single_output_file is sys.stdout:
-            output_name = '/dev/stdout'
-        else:
-            output_name = args.single_output_file.name
         outfp = get_file_writer(args.single_output_file, args.gzip, args.bzip)
     else:
         if '-' in filenames or '/dev/stdin' in filenames:
@@ -378,8 +374,8 @@ def main():  # pylint: disable=too-many-branches,too-many-statements
                 if record is not None:
                     write_record(record, outfp)
 
-            print('output in ' + output_name, file=sys.stderr)
-            if output_name is not '/dev/stdout':
+            print('output in ' + describe_file_handle(outfp), file=sys.stderr)
+            if not is_block(outfp):
                 outfp.close()
 
     # finished - print out some diagnostics.
